--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/vue-fontawesome": "^3.0.8",
+    "@vue/compiler-sfc": "^3.5.13",
     "axios": "^1.7.7",
     "dotenv": "^16.4.7",
-    "vue": "^3.4.37",
+    "vue": "^3.5.13",
     "vue-fontawesome": "^0.0.2",
     "vue-router": "^4.4.5"
   },
